src/objects/ExecutedQuoteAttachment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Executed Quote Attachments</relationshipLabel>
        <relationshipName>Executed_Quote_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Executed Quote Attachments</relationshipLabel>
        <relationshipName>Executed_Quote_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Executed Quote Attachments</relationshipLabel>
        <relationshipName>Executed_Quote_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Executed Quote Attachment</label>
    <nameField>
        <label>Executed Quote Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executed Quote Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>